fix: resume render on mobile

--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -217,4 +217,25 @@
 		gap: 1rem;
 		padding: 8px;
 	}
+
+	.resume .entry .header {
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 4px;
+	}
+
+	.resume .entry .header .position {
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 2px;
+	}
+
+	.resume .entry .header .position .title:before {
+		content: "";
+		margin-left: 0;
+	}
+
+	.resume .entry .header .timeline {
+		font-size: 0.9rem;
+	}
 }
